public interface Operation {
    double compute(double a, double b);
}
