public interface OperationFactory {
    Operation createOperation();
}
