@startuml
skinparam defaultFontName SimHei
skinparam backgroundColor #FEFEFE
skinparam classBorderColor #333333
skinparam classFontSize 14
skinparam defaultFontSize 12

title 工厂方法模式重构版类图

interface Operation {
    + double compute(double a, double b)
}

interface OperationFactory {
    + Operation createOperation()
}

class AddOperation {
    + double compute(double a, double b)
}

class SubOperation {
    + double compute(double a, double b)
}

class MulOperation {
    + double compute(double a, double b)
}

class DivOperation {
    + double compute(double a, double b)
}

class AddFactory {
    + Operation createOperation()
}

class SubFactory {
    + Operation createOperation()
}

class MulFactory {
    + Operation createOperation()
}

class DivFactory {
    + Operation createOperation()
}

class CalculatorMain {
    + void main(String[] args)
}

Operation <|.. AddOperation
Operation <|.. SubOperation
Operation <|.. MulOperation
Operation <|.. DivOperation
OperationFactory <|.. AddFactory
OperationFactory <|.. SubFactory
OperationFactory <|.. MulFactory
OperationFactory <|.. DivFactory
AddFactory ..> AddOperation : " new"
SubFactory ..> SubOperation : " new"
MulFactory ..> MulOperation : " new"
DivFactory ..> DivOperation : " new"
CalculatorMain ..> OperationFactory : " 依赖工厂接口"
CalculatorMain ..> Operation : " 依赖运算接口"
@enduml
